@@ -465,8 +465,8 @@ func testCGRConfigReloadERs(t *testing.T) {
 				HeaderDefineChar: ":",
 				RunDelay:         0,
 				ConcurrentReqs:   1024,
-				SourcePath:       "/var/spool/cgrates/cdrc/in",
-				ProcessedPath:    "/var/spool/cgrates/cdrc/out",
+				SourcePath:       "/var/spool/cgrates/ers/in",
+				ProcessedPath:    "/var/spool/cgrates/ers/out",
 				Filters:          []string{},
 				Flags:            flagsDefault,
 				Fields:           content,
@@ -858,10 +858,10 @@ func testCgrCfgV1ReloadConfigSection(t *testing.T) {
 				"Flags":                    map[string]interface{}{},
 				"FailedCallsPrefix":        "",
 				"ID":                       "*default",
-				"ProcessedPath":            "/var/spool/cgrates/cdrc/out",
+				"ProcessedPath":            "/var/spool/cgrates/ers/out",
 				"RowLength":                0,
 				"RunDelay":                 0,
-				"SourcePath":               "/var/spool/cgrates/cdrc/in",
+				"SourcePath":               "/var/spool/cgrates/ers/in",
 				"Tenant":                   nil,
 				"Timezone":                 "",
 				"Type":                     utils.META_NONE,
