@@ -111,8 +111,8 @@ func TestEventReaderLoadFromJSON(t *testing.T) {
 				HeaderDefineChar: ":",
 				RunDelay:         time.Duration(0),
 				ConcurrentReqs:   1024,
-				SourcePath:       "/var/spool/cgrates/cdrc/in",
-				ProcessedPath:    "/var/spool/cgrates/cdrc/out",
+				SourcePath:       "/var/spool/cgrates/ers/in",
+				ProcessedPath:    "/var/spool/cgrates/ers/out",
 				XmlRootPath:      utils.HierarchyPath{utils.EmptyString},
 				Tenant:           nil,
 				Timezone:         utils.EmptyString,
@@ -249,8 +249,8 @@ func TestEventReaderSameID(t *testing.T) {
 				HeaderDefineChar: ":",
 				RunDelay:         time.Duration(0),
 				ConcurrentReqs:   1024,
-				SourcePath:       "/var/spool/cgrates/cdrc/in",
-				ProcessedPath:    "/var/spool/cgrates/cdrc/out",
+				SourcePath:       "/var/spool/cgrates/ers/in",
+				ProcessedPath:    "/var/spool/cgrates/ers/out",
 				XmlRootPath:      utils.HierarchyPath{utils.EmptyString},
 				Tenant:           nil,
 				Timezone:         utils.EmptyString,
@@ -377,11 +377,11 @@ func TestERsCfgAsMapInterface(t *testing.T) {
 				"flags":                       map[string][]interface{}{},
 				"id":                          "*default",
 				"partial_record_cache":        "0",
-				"processed_path":              "/var/spool/cgrates/cdrc/out",
+				"processed_path":              "/var/spool/cgrates/ers/out",
 				"row_length":                  0,
 				"run_delay":                   "0",
 				"partial_cache_expiry_action": "",
-				"source_path":                 "/var/spool/cgrates/cdrc/in",
+				"source_path":                 "/var/spool/cgrates/ers/in",
 				"tenant":                      "",
 				"timezone":                    "",
 				"xml_root_path":               []string{""},
