@@ -65,6 +65,7 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [AgentS] Added DynamicDataProvider to AgentRequest
   * [Server] Corectly log the server listen error
   * [ERs] Added support to reference CSV fields by the column name
+  * [ERs] Renamed *default reader folders
 
  -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200
 
